Fixed color contrast for btn-default to meet WCAG 2.1 AA.

--- a/css/style.css
+++ b/css/style.css
@@ -7667,6 +7667,9 @@ form input.form-radio,
 form input.form-checkbox {
   margin: 6px 0 0 -18px !important;
 }
+.btn-default {
+  background-color: #555;
+}
 .error {
   color: #e74c3c;
 }
