--- a/less/overrides.less
+++ b/less/overrides.less
@@ -354,6 +354,11 @@ form input {
   }
 }
 
+// Buttons.
+.btn-default {
+  background-color: #555;
+}
+
 // Error containers.
 .error {
   color: @state-danger-text;
